--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "detox:build:ios-debug": "detox build --configuration ios.sim.debug",
+    "detox:e2e:ios-debug": "DETOX_CONFIGURATION=ios.sim.debug DETOX_RECORD_VIDEOS='failing' DETOX_RECORD_LOGS='failing' npx cucumber-js",
+    "detox:build:ios-release": "detox build --configuration ios.sim.release",
+    "detox:e2e:ios-release": "DETOX_CONFIGURATION=ios.sim.release DETOX_RECORD_VIDEOS='failing' DETOX_RECORD_LOGS='failing' DETOX_CLEANUP=true DETOX_HEADLESS=true npx cucumber-js",
+    "detox:build:android-debug": "detox build --configuration android.emu.debug",
+    "detox:e2e:android-debug": "DETOX_CONFIGURATION=android.emu.debug DETOX_RECORD_VIDEOS='failing' DETOX_RECORD_LOGS='failing' npx cucumber-js",
+    "detox:build:android-release": "detox build --configuration android.emu.release",
+    "detox:e2e:android-release": "DETOX_CONFIGURATION=android.emu.release DETOX_RECORD_VIDEOS='failing' DETOX_RECORD_LOGS='failing' DETOX_CLEANUP=true DETOX_HEADLESS=true npx cucumber-js"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -16,7 +24,9 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
+    "@babel/register": "^7.23.7",
     "@babel/runtime": "^7.20.0",
+    "@cucumber/cucumber": "^10.3.1",
     "@react-native/babel-preset": "0.73.21",
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.5",
@@ -24,6 +34,7 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "detox": "^20.19.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
