--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "lint": "eslint .",
     "start": "react-native start",
     "test": "jest",
+    "lint:check": "npx eslint src --ext .js,.jsx,.ts,.tsx  --resolve-plugins-relative-to .eslintrc.js",
+    "lint:fix": "npx eslint src --ext .js,.jsx,.ts,.tsx --fix  --resolve-plugins-relative-to .eslintrc.js",
+    "prettier:check": "npx prettier --check src",
+    "prettier:fix": "npx prettier --write src",
     "detox:build:ios-debug": "detox build --configuration ios.sim.debug",
     "detox:e2e:ios-debug": "DETOX_CONFIGURATION=ios.sim.debug DETOX_RECORD_VIDEOS='failing' DETOX_RECORD_LOGS='failing' npx cucumber-js",
     "detox:build:ios-release": "detox build --configuration ios.sim.release",
