--- a/.github/workflows/e2e-ios.yml
+++ b/.github/workflows/e2e-ios.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           bundler-cache: true
           ruby-version: '2.6'
-      - run: bundle exec rake
+      #   - run: bundle exec rake
 
       - name: Cache CocoaPods
         id: cache-cocoapods
