--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "lint:check": "npx eslint src --ext .js,.jsx,.ts,.tsx  --resolve-plugins-relative-to .eslintrc.js",
+    "lint:fix": "npx eslint src --ext .js,.jsx,.ts,.tsx --fix  --resolve-plugins-relative-to .eslintrc.js",
+    "prettier:check": "npx prettier --check src",
+    "prettier:fix": "npx prettier --write src"
   },
   "dependencies": {
     "react": "18.2.0",
