--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
