--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@reduxjs/toolkit": "^2.2.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-pager-view": "^6.3.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.29.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
     "styled-components": "^6.1.8"
