--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-pager-view": "^6.3.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
